# opp_labs

./: CMakeLists.txt  Instruction_ITAC.docx  README.md  main.c
fifth/: main.c
first/: CMakeLists.txt  README.md  main.c  parallel_program.c  parallel_program.h  program.c  program.h
first/firstparallel/: main.c
first/secondparallel/: CMakeLists.txt  main.c
first/sequential/: CMakeLists.txt  main.c
fourth/: Makefile  main.c
second/: CMakeLists.txt  README.md  main.c  parallel_for_program.c  parallel_for_program.h  parallel_program.c  parallel_program.h  parallel_section_program.c  parallel_section_program.h  process.c  process.h  schedule_program.c  schedule_program.h  sequential_program.c  sequential_program.h
third/: CMakeLists.txt  README.md  main.c  main.cpp
third/parallel/: CMakeLists.txt  main.c  mainwithcomment.c
third/sequential/: CMakeLists.txt  main.c
